[package]
name = "markdown-rs"
version = "0.1.0"
authors = ["lynn <cedric.colin@edu.univ-fcomte.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
benchmark = ["web-sys"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3.68", features = ["console"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"